2003-07-06  Mike Kestner <mkestner@speakeasy.net>

	* api/gtk-api.xml : regenerated
	* parser/GAPI/Metadata.pm : add support for property
	attribute alteration.
	* sources/Gtk.metadata : rule to mark TextTag.Weight as
	PangoWeight instead of gint. fixes 45214.

2003-07-05  Mike Kestner <mkestner@speakeasy.net>

	* api/*-api.xml : regenerated
	* parser/gapi2xml.pl : first pass at trying to expose
	static classes for typeless method aggregation.

2003-07-05  Mike Kestner <mkestner@speakeasy.net>

	* sources/makefile : fix the download uri's for the gnomedb
	lib source.

2003-07-04  Mike Kestner <mkestner@speakeasy.net>

	* api/*-api.xml : regenerated
	* parser/gapi2xml.pl (addFuncElems): only ignore get_type
	methods for enum types, so that we don't suppress some methods.
	(addPropElem): remove doc-str since we don't autogen docs and
	access types for enum/boxed/flags/obj as an offset from the end
	of the param_spec to avoid problems with split(/,/).

2003-07-04  Rodrigo Moya <rodrigo@ximian.com>

	* sources/makefile: updated download targets for libgda and
	libgnomedb.

2003-07-04  Rodrigo Moya <rodrigo@ximian.com>

	* sources/gtk-sharp.sources:
	* api/gda-api.xml:
	* api/gnomedb-api.xml: updated for libgda/libgnomedb 0.90.

2003-07-05  Martin Willemoes Hansen <mwh@sysrq.dk>

	* glib/Object.cs: Changed getData, setData to a single Data property
			  Different keys are allowed now.

2003-07-02  Shane Hyde  <shane@enactive.org>

	* generator/GenBase.cs : put #line directive after the 
	#region so line numbers match up.

2003-07-02  Mike Kestner  <mkestner@speakeasy.net>

	* generator/StructBase.cs : remove doc comments

2003-06-25  Martin Willemoes Hansen <mwh@sysrq.dk>

	* parser/gapi_pp.pl: Added striping of C comments

2003-06-23  Martin Willemoes Hansen <mwh@sysrq.dk>

	* glib/Type.cs: Added ToString

2003-06-14  Mike Kestner  <mkestner@speakeasy.net>

	* configure.in : tagging for 0.10

2003-06-14  Mike Kestner  <mkestner@speakeasy.net>
