@@ -1,3 +1,11 @@
+2003-07-08  Ettore Perazzoli  <ettore@ximian.com>
+
+	* gtk/Layout.custom: New file, adding the Layout::BinWindow
+	property.
+
+	* glue/layout.c: New file, adding glue for getting the bin_window
+	of a GtkLayout.
+
 2003-07-06  Mike Kestner <mkestner@speakeasy.net>
 
 	* api/gtk-api.xml : regenerated
